<resources>
    <string name="app_name">ConcultApp</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Zi5Y0pppuryjYLzCNpIVcerJ0BAVRRfy8LvxHRWv</string>
    <string name="back4app_client_key">jQHLQ9e9NDjyXhi5iyvJ7xHaaOYGjtnP5cfyDrev</string>
    <string name="email">Email</string>
    <string name="haslo">Hasło</string>
    <string name="logowanie">logowanie</string>
    <string name="zaloguj_sie">Zaloguj się</string>
    <string name="zarejestruj_sie">Zarejestruj się</string>
    <string name="powtorz_haslo">Powtórz hasło</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="student">Student</string>
    <string name="korepetytor">Korepetytor</string>
    <string name="data_urodzenia">Data urodzenia:</string>
    <string name="_01_01_1995">01/01/1995</string>
    <string name="zmien">Zmień</string>
    <string name="done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="Logowanie">Logowanie</string>
    <string name="imie_wymagane">Pole imię jest wymagane</string>
    <string name="nazwisko_wymagane">Pole nazwisko jest wymagane</string>
    <string name="telefon_wymagany">Pole numer telefonu jest wymagane</string>
    <string name="email_wymagany">Pole email jest wymagane</string>
    <string name="nieprawydlowy_email">Email nieprawidolowy</string>
    <string name="haslo_wymagane">Pole hasło jest wymagane</string>
    <string name="powtorz_haslo_wymagane">Powtórz hasło</string>
    <string name="wybierz_profesje">Wybierz swoją profesję</string>
    <string name="category">Category:</string>
    <string name="nazwa_uzytkownika">Nazwa użytkownika</string>
    <string name="nazwa_uzwytkownika_wymagana">Pole nazwa użytkownika jest wymagana</string>
    <string name="hasla_niepasuja">Hasła do siebie nie psaują!</string>
    <string name="student_panel">Panel Studenta</string>
    <string name="tutor_panel">Panel Korepetytora</string>
    <string name="find_tutor">Znajdź Korepetytora</string>
    <string name="tasks">Zadania</string>
    <string name="my_tutors">Moi Korepetytorzy</string>
    <string name="logout">Logout</string>
    <string name="my_students">Moi Uczniowie</string>
    <string name="to_evaluation">Do Sprawdzenia</string>
    <string name="math">Mat</string>
    <string name="geography">Geo</string>
    <string name="biology">Bio</string>
    <string name="chemistry">Chem</string>
    <string name="physic">Fiz</string>
    <string name="add_tutor">Add tutor</string>
    <string name="delete_tutor">Delete tutor</string>
    <string name="market_label">Ocenione</string>
    <string name="send_task_label">Wyślij zadanie</string>
    <string name="send">Send</string>
    <string name="tytu">Tytuł</string>
    <string name="opis">Opis</string>
    <string name="my_students_tutor">Moi Studenci</string>
</resources>
