<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            tools:context="com.binarapps.internalcalculator.contacts.fragment.insert.InsertContactFragment">

            <android.support.constraint.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="90dp" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="145dp"
                android:layout_height="135dp"
                android:padding="5dp"
                android:src="@drawable/ic_person_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_input_layout"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/imie"
                app:errorEnabled="true"
                app:layout_constraintLeft_toRightOf="@+id/profile_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name_input_layout"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="@string/nazwisko"
                app:errorEnabled="true"
                app:layout_constraintLeft_toRightOf="@+id/profile_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwrod_input_layout"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:hint="@string/haslo"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">

                <EditText
                    android:id="@+id/password_text_edit"
                    android:layout_width="320dp"
                    android:layout_height="35dp"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/repeat_password_input_layout"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:hint="@string/powtorz_haslo"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/passwrod_input_layout">

                <EditText
                    android:id="@+id/repeat_password_text_edit"
                    android:layout_width="320dp"
                    android:layout_height="35dp"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:hint="@string/email"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/repeat_password_input_layout">

                <EditText
                    android:id="@+id/email_text_edit"
                    android:layout_width="320dp"
                    android:layout_height="35dp"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_number_input_layout"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:hint="@string/numer_telefonu"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

                <EditText
                    android:id="@+id/phone_number_text_edit"
                    android:layout_width="320dp"
                    android:layout_height="35dp"
                    android:inputType="phone"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_button_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_input_layout">

                <RadioButton
                    android:id="@+id/student_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/tutor_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/korepetytor"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/student_radio_button" />
            </RadioGroup>

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/radio_button_profession" />

            <TextView
                android:id="@+id/date_of_birth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/data_urodzenia"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/category_spinner" />

            <TextView
                android:id="@+id/date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/_01_01_1995"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintLeft_toRightOf="@+id/date_of_birth_label"
                app:layout_constraintTop_toBottomOf="@+id/category_spinner"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/change_date_of_birth"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zmien"
                android:textColor="@color/colorPrimary"
                app:layout_constraintLeft_toRightOf="@+id/date_of_birth"
                app:layout_constraintTop_toBottomOf="@id/category_spinner" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_profile_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="80dp"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                android:tint="@color/white"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toTopOf="@+id/horizontal_guideline" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>